--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react": "5.0.2",
     "typescript": "^5.9.2",
-    "vite": "^5.4.8",
-    "@vitejs/plugin-react": "^4.3.1"
+    "vite": "7.1.4"
   }
 }
